# 2025__tool-util-local__disk-speed-tests

./: -  .clinerules  .coveragerc  .gitignore  CLAUDE.md  DEVELOPMENT.md  IMPROVEMENT_PLAN_9_10.md  Makefile  PHASE_3_SUMMARY.md  README.md  Start Diskbench Bridge.command  TODO_MASTER_REFACTOR_PLAN.md  TODO_app_js.md  TODO_bridge_server.md  TODO_main.md  TODO_memory_bank.md  TODO_qlab_patterns.md  TODO_web-gui_index.md  WARP.md  build_app.sh  build_dmg.sh  debug_json_error.py  install.sh  kill_all_services.sh  package.sh  pyproject.toml  pytest.ini  qlab_disk_tester.spec  requirements.txt  start-qlab-tester.sh  start.sh  stop.sh  test_bridge_fio.py
.venv-clean/: pyvenv.cfg
00_infos/: llm-context.md
90_reports/: changes.md  coverage.md  test-report.md
bridge-server/: server.py
commands/: __init__.py  list_disks.py  setup.py  test.py  validate.py
core/: __init__.py  fio_runner.py
diskbench/: __init__.py  demo_monitoring.py  main.py  test_diskbench.py
docs/: architecture-flow.md  evaluation-criteria.md  flow-diagram.md
fio-3.37/: -  client.d  config-host.h  debug.d  dedupe.d  fdp.d  filehash.d  filelock.d  filesetup.d  fio  fio.d  fio_wrapper.sh  flow.d  helpers.d  idletime.d  init.d  io_u.d  io_u_queue.d  ioengines.d  iolog.d  lex.yy.c  libfio.d  log.d  options.d  parse.d  rate-submit.d  server.d  smalloc.d  stat.d  td_error.d  time.d  y.tab.h  zone-dist.d
lib/: fio_engine.py  report_generator.py
logs/: diskbench.jsonl
memory-bank/: activeContext.md  guiContext.md  productContext.md  progress.md  projectbrief.md  techContext.md
qlab-disk-tester/: -  (+7 more)
(+182 files in other folders)
